# Humanoid-Robotic-Book

./: .gitignore  404.html  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.cf531005.css
assets/js/: 0c96640e.876e4e80.js  0c96640e.dc4db6ed.js  0d88b715.29ae50c6.js  0d88b715.ef9dc044.js  34e7f7e1.4fa12865.js  34e7f7e1.8e6deff6.js  3d76c309.75c8885b.js  3d76c309.d1708742.js  43ba2ebd.ae1c7688.js  43ba2ebd.c6fa52e0.js  584.661d6234.js  60895839.25de947f.js  60895839.41733644.js  6b1d774a.5e70182b.js  7a1d60cd.2c582abd.js  7a1d60cd.787ac04d.js  935f2afb.68e921b0.js  9f2519b9.1b8cabc5.js  9f2519b9.3ab5b3fb.js  a7bd4aaa.e0d9129e.js  a94703ab.44186f6e.js  bc08bd0f.80b82569.js  bc08bd0f.ebf95424.js  bffdccfa.1f94d392.js  bffdccfa.4fd16a75.js  c4f5d8e4.a8cb2a14.js  c72b4927.0283adeb.js  c72b4927.5beb2f54.js  ce21c3b3.11e753af.js  ce21c3b3.d1bbcf9c.js  e51d3092.b9ef1da1.js  (+4 more)
backend/: README.md  main.py  main_fastapi.py  pyproject.toml  requirements.txt  run_server.py  server.js  unified_server_final.py  users.db
backend/rag/: ingestion.js  query.js
better-auth-server/: README.md  next.config.js  package-lock.json  package.json
docs/: capstone.html  conversational-robotics.html  deployment-optimization.html  gazebo.html  hardware-integration.html  intro.html  learning-adaptation.html  motion-planning.html  nvidia-isaac.html  perception.html  ros2.html  safety-ethics.html  vla.html
ur/: 404.html  index.html  sitemap.xml
(+99 files in other folders)
